# mini_trajectory_transformer_gymnasium

./: .gitignore  GYMNASIUM_MIGRATION.md  LOW_MEMORY_HALFCHEETAH.md  README.md  pyproject.toml  requirements.txt  run_halfcheetah_1gb_plan.sh  run_halfcheetah_1gb_train.sh  run_halfcheetah_20ep_plan.sh  run_halfcheetah_20ep_train.sh  run_halfcheetah_m1_max_train.sh
mini_tt/: __init__.py  dataset.py  discretizer.py  model.py  plan.py  train.py  utils.py
