[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-trajectory-transformer-gymnasium"
version = "0.1.0"
description = "Small-scale Gymnasium/Minari Trajectory Transformer"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "torch>=2.2",
  "gymnasium[mujoco]>=1.0.0",
  "minari[all]>=0.5.3",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
include = ["mini_tt*"]
